--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A Node.js port of the p5.js library",
   "main": "index.js",
   "dependencies": {
+    "@saschazar/wasm-webp": "^3.0.1",
     "axios": "^0.21.1",
     "canvas": "^2.5.0",
+    "delay": "^5.0.0",
     "gifencoder": "^2.0.1",
     "is-url": "^1.2.4",
     "jimp": "^0.16.1",
