--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@saschazar/wasm-webp": "^3.0.1",
     "axios": "^0.21.1",
     "canvas": "^2.5.0",
+    "concat-stream": "^2.0.0",
     "delay": "^5.0.0",
     "gifencoder": "^2.0.1",
     "is-url": "^1.2.4",
     "jimp": "^0.16.1",
     "jsdom": "runvnc/jsdom",
-    "png-file-stream": "^1.2.1"
+    "png-file-stream": "^1.2.1",
+    "simple-zstd": "^1.4.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
